fixed stretched button on secondary pages

--- a/css/general.css
+++ b/css/general.css
@@ -90,10 +90,6 @@ header {
 	
 }
 
-.just-eat-button {
-	height: 32px;
-}
-
 
 
 /* ----------------------------------------------------------------------------------------- Hero */
