--- a/css/menu2.css
+++ b/css/menu2.css
@@ -11,9 +11,6 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-img {
-	width: 100%;
-}
 
 #menu-wrapper {
 	margin: 20px auto;
